DB scripts + java mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-
+spring.jpa.database=POSTGRESQL
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+debug=true
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.user=postgres
+spring.flyway.password=postgres+++
+spring.flyway.schemas=touk
+spring.flyway.locations=classpath:db/migration/postgres
+spring.flyway.baselineOnMigrate=true
+spring.messages.basename=messages/messages
+#Database connection for application
+spring.datasource.url=${spring.flyway.url}
+spring.datasource.schema=${spring.flyway.schemas}
+spring.datasource.username=${spring.flyway.user}
+spring.datasource.password=${spring.flyway.password}
+server.port=8086
