--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,12 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
 spring.flyway.password=postgres+++
 spring.flyway.schemas=touk
-spring.flyway.locations=classpath:db/migration/postgres
+spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate=true
 spring.messages.basename=messages/messages
 #Database connection for application
-spring.datasource.url=${spring.flyway.url}
-spring.datasource.schema=${spring.flyway.schemas}
-spring.datasource.username=${spring.flyway.user}
-spring.datasource.password=${spring.flyway.password}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.schema=touk
+spring.datasource.username=postgres
+spring.datasource.password=postgres+++
 server.port=8086
