--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.flyway.baselineOnMigrate=true
 spring.messages.basename=messages/messages
 #Database connection for application
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.schema=touk
+spring.jpa.properties.hibernate.default_schema=touk
 spring.datasource.username=postgres
 spring.datasource.password=postgres+++
 server.port=8086
